2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed TODO
	* TODO

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a section that explains how to pass argument to options that
	takes optional arguments with its short form.
	* doc/aria2c.1.txt
	
2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added -u for the short form of --max-upload-limit option.
	* doc/aria2c.1.txt
	* src/option_processing.cc
	* src/usage_text.h

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added -V for the short form of --check-integrity option.
	Now the argument of --check-integrity option is optional:
	if it is omitted, it is evaluated as true.
	* doc/aria2c.1.txt
	* src/option_processing.cc
	* src/usage_text.h

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made the default value of --ftp-pasv option set to true and it can take
	true/false values.
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h
	* doc/aria2c.1.txt

2008-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Given custom random number generator to std::random_shuffle.
	* src/AnnounceList.cc
	* src/BtLeecherStateChoke.cc
	* src/BtSeederStateChoke.cc
	* src/DefaultBtRequestFactory.cc
	* src/MetalinkEntry.cc
	* src/RarestPieceSelector.cc
	* src/SimpleRandomizer.cc
	* src/SimpleRandomizer.h

2008-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Now the default value of --enable-direct-io is true.
	* src/OptionHandlerFactory.cc
	* doc/aria2c.1.txt
	
2008-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Erase peer before executing onReturningPeer and onErasingPeer
	because choking algorithm called from onReturningPeer doesn't
	like erasing peer in the active peer list.
	* src/DefaultPeerStorage.cc

2008-11-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Instead of creating special filename in createDownloadResult() if